# Isometric_Injective_Energies

./: .gitignore  CMakeLists.txt  README.md
apps/: IsoTLC_2D.cpp  TLC_2D.cpp  distortion_2D_solver.cpp  distortion_3D_solver.cpp  solver_test.cpp
cmake/: Eigen3.cmake  nlohmann-json.cmake
examples/: solver_options.json
src/: ARAP_2D_Formulation.cpp  ARAP_2D_Formulation.h  ARAP_3D_Formulation.cpp  ARAP_3D_Formulation.h  Dirichlet_2D_Formulation.cpp  Dirichlet_2D_Formulation.h  Dirichlet_3D_Formulation.cpp  Dirichlet_3D_Formulation.h  Distortion_Energy_2D_Formulation.cpp  Distortion_Energy_2D_Formulation.h  Distortion_Energy_3D_Formulation.cpp  Distortion_Energy_3D_Formulation.h  Energy_Formulation.cpp  Energy_Formulation.h  IO.cpp  IO.h  Injective_Energy_2D_Formulation.cpp  Injective_Energy_2D_Formulation.h  Injective_Energy_3D_Formulation.cpp  Injective_Energy_3D_Formulation.h  IsoTLC_2D_Formulation.cpp  IsoTLC_2D_Formulation.h  IsoTLC_Residual_2D_Formulation.cpp  IsoTLC_Residual_2D_Formulation.h  NewtonSolver.cpp  NewtonSolver.h  QuasiNewtonSolver.cpp  QuasiNewtonSolver.h  Solver.cpp  Solver.h  TLC_2D_Formulation.cpp  TLC_2D_Formulation.h  TLC_Residual_2D_Formulation.cpp  TLC_Residual_2D_Formulation.h  deformation_gradient_util.cpp  deformation_gradient_util.h  geo_util.cpp  geo_util.h
